--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Lotto Simulator</h1>
-    <button>Admin</button>
-    <button>User</button>
-</body>
+    <div class="container">
+        <h1>
+            <img src="/media/lottery_logo.PNG" alt="">
+            National Lottery</h1>
+        <button>Admin</button>
+        <button>User</button>
+    </div>
 </html>
