removed script link from index file

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>
             <img src="/media/lottery_logo.PNG" alt="">
             National Lottery</h1>
-        <button>Admin</button>
-        <button>User</button>
+            <a href="destination.html">
+                <button>Admin</button>
+            </a>
+            <a href="user.html">
+                <button>User</button>
+            </a>
     </div>
 </html>
