--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="row">
+        <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
+        <div class="col-6"><h1>National Lottery</h1></div>
+    </div>
     <div class="container">
-        <h1>
-            <img src="/media/lottery_logo.PNG" alt="">
-            National Lottery</h1>
-            <a href="destination.html">
-                <button>Admin</button>
-            </a>
-            <a href="user.html">
-                <button>User</button>
-            </a>
     </div>
 </html>
