--- a/user.html
+++ b/user.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
-    <h1>Select 6 Numbers</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
+            <div class="col-6"><h1>Select 6 Numbers</h1></div>
+        </div>
+    </div>
 </body>
 </html>
