--- a/user.html
+++ b/user.html
@@ -13,6 +13,10 @@
             <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
             <div class="col-6"><h1>Select 6 Numbers</h1></div>
         </div>
+        <div class="row">
+            <div class="col"></div>
+            <div class="col"></div>
+        </div>
     </div>
 </body>
 </html>
