fixed i\user file

--- a/user.html
+++ b/user.html
@@ -6,17 +6,71 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
-            <div class="col-6"><h1>Select 6 Numbers</h1></div>
-        </div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-        </div>
+    <div class="row">
+        <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
+        <div class="col-6"><h1>Select 6 Numbers</h1></div>
     </div>
+    <div class="container">
+        
+    <div class="row">
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="box" id="boxred">1</div>
+        <div class="box" id="boxred">2</div>
+        <div class="box" id="boxred">3</div>
+        <div class="box" id="boxred">4</div>
+        <div class="box" id="boxred">5</div>
+        <div class="box" id="boxred">6</div>
+        <div class="box" id="boxred">7</div>
+        <div class="box" id="boxred">8</div>
+        <div class="box" id="boxred">9</div>
+        <div class="box" id="boxred">10</div>
+        <div class="box" id="boxred">11</div>
+        <div class="box" id="boxred">12</div>
+        <div class="box" id="boxred">13</div>
+        <div class="box" id="boxyellow">14</div>
+        <div class="box" id="boxyellow">15</div>
+        <div class="box" id="boxyellow">16</div>
+        <div class="box" id="boxyellow">17</div>
+        <div class="box" id="boxyellow">18</div>
+        <div class="box" id="boxyellow">19</div>
+        <div class="box" id="boxyellow">20</div>
+        <div class="box" id="boxyellow">21</div>
+        <div class="box" id="boxyellow">22</div>
+        <div class="box" id="boxyellow">23</div>
+        <div class="box" id="boxyellow">24</div>
+        <div class="box" id="boxyellow">25</div>
+        <div class="box" id="boxgreen">26</div>
+        <div class="box" id="boxgreen">27</div>
+        <div class="box" id="boxgreen">28</div>
+        <div class="box" id="boxgreen">29</div>
+        <div class="box" id="boxgreen">30</div>
+        <div class="box" id="boxgreen">31</div>
+        <div class="box" id="boxgreen">32</div>
+        <div class="box" id="boxgreen">33</div>
+        <div class="box" id="boxgreen">34</div>
+        <div class="box" id="boxgreen">35</div>
+        <div class="box" id="boxgreen">37</div>
+        <div class="box" id="boxblue">38</div>
+        <div class="box" id="boxblue">39</div>
+        <div class="box" id="boxblue">40</div>
+        <div class="box" id="boxblue">41</div>
+        <div class="box" id="boxblue">42</div>
+        <div class="box" id="boxblue">43</div>
+        <div class="box" id="boxblue">44</div>
+        <div class="box" id="boxblue">45</div>
+        <div class="box" id="boxblue">46</div>
+        <div class="box" id="boxblue">47</div>
+        <div class="box" id="boxblue">48</div>
+        <div class="box" id="boxblue">49</div>
+        <div class="box" id="boxblue">50</div>
+        <div class="box" id="boxblue">51</div>
+        <div class="box" id="boxblue">52</div>
+    </div>
+
 </body>
 </html>
