fixed some errors in UI

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="row">
+    <div class="contain"><div class="row">
         <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
         <div class="col-6"><h1>National Lottery</h1></div>
     </div>
-    <div class="container">
+</div>
+    <div class="wrapper">
+        <a href="user.html">
+            <button>User</button>
+        </a>
+        <a href="destination.html">
+            <button>Admin</button>
+        </a>
     </div>
 </html>
