--- a/user.html
+++ b/user.html
@@ -71,6 +71,10 @@
         <div class="box" id="boxblue">51</div>
         <div class="box" id="boxblue">52</div>
     </div>
+    </div>
+    <a href="index.html">
+        <button>Back to main page</button>
+    </a>
 
 </body>
 </html>
