created function that creates an array of the number that the user inputs

--- a/user.html
+++ b/user.html
@@ -14,64 +14,70 @@
         <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
         <div class="col-6"><h1>Select 6 Numbers</h1></div>
     </div>
+    <div id="result"></div>
+
     <div class="container">
         
     <div class="row">
         <div class="col"></div>
         <div class="col"></div>
-        <div class="box" id="boxred">1</div>
-        <div class="box" id="boxred">2</div>
-        <div class="box" id="boxred">3</div>
-        <div class="box" id="boxred">4</div>
-        <div class="box" id="boxred">5</div>
-        <div class="box" id="boxred">6</div>
-        <div class="box" id="boxred">7</div>
-        <div class="box" id="boxred">8</div>
-        <div class="box" id="boxred">9</div>
-        <div class="box" id="boxred">10</div>
-        <div class="box" id="boxred">11</div>
-        <div class="box" id="boxred">12</div>
-        <div class="box" id="boxred">13</div>
-        <div class="box" id="boxyellow">14</div>
-        <div class="box" id="boxyellow">15</div>
-        <div class="box" id="boxyellow">16</div>
-        <div class="box" id="boxyellow">17</div>
-        <div class="box" id="boxyellow">18</div>
-        <div class="box" id="boxyellow">19</div>
-        <div class="box" id="boxyellow">20</div>
-        <div class="box" id="boxyellow">21</div>
-        <div class="box" id="boxyellow">22</div>
-        <div class="box" id="boxyellow">23</div>
-        <div class="box" id="boxyellow">24</div>
-        <div class="box" id="boxyellow">25</div>
-        <div class="box" id="boxgreen">26</div>
-        <div class="box" id="boxgreen">27</div>
-        <div class="box" id="boxgreen">28</div>
-        <div class="box" id="boxgreen">29</div>
-        <div class="box" id="boxgreen">30</div>
-        <div class="box" id="boxgreen">31</div>
-        <div class="box" id="boxgreen">32</div>
-        <div class="box" id="boxgreen">33</div>
-        <div class="box" id="boxgreen">34</div>
-        <div class="box" id="boxgreen">35</div>
-        <div class="box" id="boxgreen">37</div>
-        <div class="box" id="boxblue">38</div>
-        <div class="box" id="boxblue">39</div>
-        <div class="box" id="boxblue">40</div>
-        <div class="box" id="boxblue">41</div>
-        <div class="box" id="boxblue">42</div>
-        <div class="box" id="boxblue">43</div>
-        <div class="box" id="boxblue">44</div>
-        <div class="box" id="boxblue">45</div>
-        <div class="box" id="boxblue">46</div>
-        <div class="box" id="boxblue">47</div>
-        <div class="box" id="boxblue">48</div>
-        <div class="box" id="boxblue">49</div>
-        <div class="box" id="boxblue">50</div>
-        <div class="box" id="boxblue">51</div>
-        <div class="box" id="boxblue">52</div>
+        <div class="box" id="boxred" onclick="selectNumber(1)">1</div>
+        <div class="box" id="boxred" onclick="selectNumber(2)">2</div>
+        <div class="box" id="boxred"onclick="selectNumber(3)">3</div>
+        <div class="box" id="boxred"onclick="selectNumber(4)">4</div>
+        <div class="box" id="boxred"onclick="selectNumber(5)">5</div>
+        <div class="box" id="boxred"onclick="selectNumber(6)">6</div>
+        <div class="box" id="boxred"onclick="selectNumber(7)">7</div>
+        <div class="box" id="boxred"onclick="selectNumber(8)">8</div>
+        <div class="box" id="boxred" onclick="selectNumber(9)">9</div>
+        <div class="box" id="boxred"onclick="selectNumber(10)">10</div>
+        <div class="box" id="boxred"onclick="selectNumber(11)">11</div>
+        <div class="box" id="boxred"onclick="selectNumber(12)">12</div>
+        <div class="box" id="boxred"onclick="selectNumber(13)">13</div>
+        <div class="box" id="boxyellow" onclick="selectNumber(14)">14</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(15)">15</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(16)">16</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(17)">17</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(18)">18</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(19)">19</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(20)">20</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(21)">21</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(22)">22</div>
+        <div class="box" id="boxyellow" onclick="selectNumber(23)">23</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(24)">24</div>
+        <div class="box" id="boxyellow"onclick="selectNumber(25)">25</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(26)">26</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(27)">27</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(28)">28</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(29)">29</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(30)">30</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(31)">31</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(32)">32</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(33)">33</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(34)">34</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(35)">35</div>
+        <div class="box" id="boxgreen" onclick="selectNumber(36)">36</div>
+        <div class="box" id="boxgreen"onclick="selectNumber(36)">37</div>
+        <div class="box" id="boxblue"onclick="selectNumber(38)">38</div>
+        <div class="box" id="boxblue"onclick="selectNumber(39)">39</div>
+        <div class="box" id="boxblue"onclick="selectNumber(40)">40</div>
+        <div class="box" id="boxblue"onclick="selectNumber(41)">41</div>
+        <div class="box" id="boxblue"onclick="selectNumber(42)">42</div>
+        <div class="box" id="boxblue"onclick="selectNumber(43)">43</div>
+        <div class="box" id="boxblue"onclick="selectNumber(44)">44</div>
+        <div class="box" id="boxblue"onclick="selectNumber(45)">45</div>
+        <div class="box" id="boxblue" onclick="selectNumber(46)">46</div>
+        <div class="box" id="boxblue"onclick="selectNumber(47)">47</div>
+        <div class="box" id="boxblue"onclick="selectNumber(48)">48</div>
+        <div class="box" id="boxblue"onclick="selectNumber(49)">49</div>
+        <div class="box" id="boxblue"onclick="selectNumber(50)">50</div>
+        <div class="box" id="boxblue"onclick="selectNumber(51)">51</div>
+        <div class="box" id="boxblue"onclick="selectNumber(52)">52</div>
     </div>
     </div>
+    <a href="index.html">
+        <button>Submit</button>
+    </a>
     <a href="index.html">
         <button>Back to main page</button>
     </a>
