--- a/user.html
+++ b/user.html
@@ -77,10 +77,10 @@
     </div>
     </div>
     <a href="index.html">
-        <button>Submit</button>
+        <button type="button" class="btn btn-primary">Submit</button>
     </a>
     <a href="index.html">
-        <button>Back to main page</button>
+        <button type="button" class="btn btn-primary">Back to Homepage</button>
     </a>
 
 </body>
