added content in admin file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="user.html">
             <button>User</button>
         </a>
-        <a href="destination.html">
+        <a href="admin.html">
             <button>Admin</button>
         </a>
     </div>
