--- a/admin.html
+++ b/admin.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="grid text-center" style="--bs-columns: 4; --bs-gap: 5rem;">
+        <div class="g-col-2"><img src="/media/lottery_logo.PNG" alt=""></div>
+        <div class="g-col-2"><h1>National Lottery</h1></div>
+      </div>
 </body>
 </html>
