added grid in admin page

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </div>
     <div class="wrapper">
         <a href="user.html">
-            <button>User</button>
+            <button type="button" class="btn btn-primary">User</button>
         </a>
         <a href="admin.html">
-            <button>Admin</button>
+            <button type="button" class="btn btn-primary">Admin</button>
         </a>
     </div>
 </html>
