added fuction for number of boxes

--- a/admin.html
+++ b/admin.html
@@ -14,8 +14,11 @@
         <div class="g-col-2"><h1>National Lottery</h1></div>
       </div>
       <div class="grid text-center" style="--bs-columns: 4; --bs-gap: 5rem;">
-        <div class="g-col-2">.g-col-2</div>
-        <div class="g-col-2">.g-col-2</div>
+        <div class="g-col-2">Winning numbers</div>
+        <div class="g-col-2"></div>
       </div>
+      <a href="index.html">
+        <button type="button" class="btn btn-primary">Back to Homepage</button>
+    </a>
 </body>
 </html>
