--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
+<script src="s"></script>
 </head>
 <body>
     <div class="contain"><div class="row">
         <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
         <div class="col-6"><h1>National Lottery</h1></div>
     </div>
+    <h2></h2>
 </div>
     <div class="wrapper">
         <a href="user.html">
