--- a/user.html
+++ b/user.html
@@ -20,8 +20,9 @@
 </header>
 
     <div class="container">
+        <div id="numContainer" class="row"></div>
         
-    <div class="row">
+  <!-- <div class="row">
         <div class="col"></div>
         <div class="col"></div>
         <div class="box" id="boxred" onclick="selectNumber(1)">1</div>
@@ -76,7 +77,7 @@
         <div class="box" id="boxblue"onclick="selectNumber(50)">50</div>
         <div class="box" id="boxblue"onclick="selectNumber(51)">51</div>
         <div class="box" id="boxblue"onclick="selectNumber(52)">52</div>
-    </div>
+    </div> -->
     </div>
     <input type="text" id="numberInput" placeholder="Enter your numbers separated by commas">
     <a href="index.html">
