adjusted button elements

--- a/user.html
+++ b/user.html
@@ -20,9 +20,105 @@
 </header>
 
     <div class="container">
-        <div id="numContainer" class="row"></div>
-        
-  <!-- <div class="row">
+        <div class="keyboard">
+            <div class="row">
+                <button class="btn" id="boxred">1</button>
+                <button class="btn"id="boxred">2</button>
+                <button class="btn" id="boxred">3</button>
+                <button class="btn" id="boxred">4</button>
+                <button class="btn" id="boxred">5</button>
+                <button class="btn" id="boxred">6</button>
+                <button class="btn" id="boxred">7</button>
+                <button class="btn" id="boxred">8</button>
+                <button class="btn" id="boxred">9</button>
+                <button class="btn" id="boxred">10</button>
+                <button class="delete">Delete</button>
+            </div>
+            <div class="row">
+                <button class="btn" id="boxred">11</button>
+                <button class="btn" id="boxred">12</button>
+                <button class="btn" id="boxred">13</button>
+                <button class="btn" id="boxyellow">14</button>
+                <button class="btn" id="boxyellow">15</button>
+                <button class="btn" id="boxyellow">16</button>
+                <button class="btn" id="boxyellow">17</button>
+                <button class="btn" id="boxyellow">18</button>
+                <button class="btn" id="boxyellow">19</button>
+                <button class="btn"id="boxyellow">20</button>
+                <button class="btn">21</button>
+            </div>
+            <div class="row">
+                <button class="btn"id="boxyellow">22</button>
+                <button class="btn" id="boxyellow">23</button>
+                <button class="btn"id="boxyellow">24</button>
+                <button class="btn"id="boxyellow">25</button>
+                <button class="btn" id="boxgreen">26</button>
+                <button class="btn" id="boxgreen">27</button>
+                <button class="btn" id="boxgreen">28</button>
+                <button class="btn" id="boxgreen">29</button>
+                <button class="btn"id="boxgreen">30</button>
+            </div>
+            <div class="row">
+                <button class="btn" id="boxgreen">31</button>
+                <button class="btn" id="boxgreen">32</button>
+                <button class="btn"id="boxgreen">33</button>
+                <button class="btn"id="boxgreen">34</button>
+                <button class="btn"id="boxgreen">35</button>
+                <button class="btn" id="boxblue" >36</button>
+                <button class="btn" id="boxblue">37</button>
+                <button class="btn"id="boxblue">38</button>
+                <button class="btn"id="boxblue">39</button>
+                <button class="btn"id="boxblue">40</button>
+            </div>
+            <div class="row">
+                <button class="btn"id="boxblue">41</button>
+                <button class="btn"id="boxblue">42</button>
+                <button class="btn"id="boxblue">43</button>
+                <button class="btn"id="boxblue">44</button>
+                <button class="btn"id="boxblue">45</button>
+                <button class="btn"id="boxblue">46</button>
+                <button class="btn"id="boxblue">47</button>
+                <button class="btn"id="boxblue">48</button>
+                <button class="btn"id="boxblue">49</button>
+                <button class="btn"id="boxblue">50</button>
+                <button class="btn"id="boxblue">51</button>
+                <button class="btn"id="boxblue">5</button>
+            </div>
+        </div>
+    </div>
+    <div id="numContainer" class="row"></div>
+    <input type="text" id="numberInput" placeholder="Enter your numbers">
+    <a href="index.html">
+        <button type="button" onclick="getInputNum()" class="btn btn-primary mb-5">Submit</button>
+    </a>
+    <a href="index.html">
+        <button type="button" class="btn btn-primary">Back to Homepage</button>
+    </a>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <!-- <div class="row">
         <div class="col"></div>
         <div class="col"></div>
         <div class="box" id="boxred" onclick="selectNumber(1)">1</div>
@@ -78,14 +174,3 @@
         <div class="box" id="boxblue"onclick="selectNumber(51)">51</div>
         <div class="box" id="boxblue"onclick="selectNumber(52)">52</div>
     </div> -->
-    </div>
-    <input type="text" id="numberInput" placeholder="Enter your numbers separated by commas">
-    <a href="index.html">
-        <button type="button" onclick="getInputNum()" class="btn btn-primary">Submit</button>
-    </a>
-    <a href="index.html">
-        <button type="button" class="btn btn-primary">Back to Homepage</button>
-    </a>
-
-</body>
-</html>
