added header in html pages and color for header

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <script src="s"></script>
 </head>
 <body>
-    <div class="contain"><div class="row">
-        <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
-        <div class="col-6"><h1>National Lottery</h1></div>
+    <header>
+        <div class="contain"><div class="row">
+            <div class="col-6"><img src="/media/lottery_logo.PNG" alt=""></div>
+            <div class="col-6"><h1>National Lottery</h1></div>
+        </div>
+        <h2></h2>
     </div>
-    <h2></h2>
-</div>
+    </header>
     <div class="wrapper">
         <a href="user.html">
             <button type="button" class="btn btn-primary">User</button>
